Mobile layout adjustments and z-index fixes

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -10,6 +10,7 @@
   font-family: sans-serif;
   font-size: 1.5rem;
   background-color: white;
+  z-index: 10;
 }
 
 .nav-toggle {
