--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -17,6 +17,8 @@
   &__show {
     display: flex;
   }
+
+  z-index: 20;
 }
 
 .nav-link {
