--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,13 +1,13 @@
 .project {
   padding: 1rem;
+  margin-top: 13rem;
 }
 
 .scroller {
   width: 100%;
-  height: 300px;
 }
 
 .project-image {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: auto;
 }
